Added textures + autojump option

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<script src="assets/lib/three/PointerLockControls.js"></script>
 		<script src="assets/lib/noise/perlin.js"></script>
 		<script src="assets/js/main.js" defer></script>
-		<title>Minecraft Terrain Prototype</title>
+		<title>Terrain test</title>
 	</head>
-	<body></body>
+	<body>
+		<button id="autojump" onclick="toggleAutojump(this)">Autojump: OFF</button>
+	</body>
 </html>
