--- a/index.html
+++ b/index.html
@@ -13,7 +13,5 @@
 		<script src="assets/js/main.js" defer></script>
 		<title>Terrain test</title>
 	</head>
-	<body>
-		<button id="autojump" onclick="toggleAutojump(this)">Autojump: OFF</button>
-	</body>
+	<body></body>
 </html>
