--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="author" content="Mattéo Legagneux">
+		<meta name="author" content="Hritik RC, Mattéo Legagneux">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<script src="assets/lib/three/three.js"></script>
 		<script src="assets/lib/three/PointerLockControls.js"></script>
-		<script src="assets/lib/noise/perlin.js"></script>
+		<script src="assets/lib/perlin.js"></script>
+		<script src="assets/lib/stats.js"></script>
 		<script src="assets/js/main.js" defer></script>
-		<title>Terrain test</title>
+		<title>Terrain generation</title>
 	</head>
 	<body></body>
 </html>
