Files organized by task

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 		<script src="assets/lib/three/PointerLockControls.js"></script>
 		<script src="assets/lib/perlin.js"></script>
 		<script src="assets/lib/stats.js"></script>
+		<script src="assets/js/variables.js" defer></script>
+		<script src="assets/js/render.js" defer></script>
+		<script src="assets/js/update.js" defer></script>
+		<script src="assets/js/block.js" defer></script>
+		<script src="assets/js/eventlisteners.js" defer></script>
 		<script src="assets/js/main.js" defer></script>
-		<title>Terrain generation</title>
+		<script src="assets/js/stats.js" defer></script>
+		<title>MC Chunk Generation</title>
 	</head>
 	<body></body>
 </html>
