--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 		<script src="assets/js/stats.js" defer></script>
 		<title>MC Chunk Generation</title>
 	</head>
-	<body></body>
+	<body>
+		<div id="debug">Debug</div>
+		<div id="pointer"></div>
+	</body>
 </html>
