--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script src="assets/js/eventlisteners.js" defer></script>
 		<script src="assets/js/main.js" defer></script>
 		<script src="assets/js/stats.js" defer></script>
-		<title>MC Chunk Generation</title>
+		<title>Minecraft</title>
 	</head>
 	<body>
 		<div id="debug">Debug</div>
