Movement speed, jump speed, crosshair, inventory bar, inventory selector

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="Hritik RC, Mattéo Legagneux">
+		<meta name="version" content="rd-132211">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<script src="assets/lib/three/three.js"></script>
@@ -17,11 +18,11 @@
 		<script src="assets/js/block.js" defer></script>
 		<script src="assets/js/eventlisteners.js" defer></script>
 		<script src="assets/js/main.js" defer></script>
-		<script src="assets/js/stats.js" defer></script>
+		<!-- <script src="assets/js/stats.js" defer></script> -->
+		<script src="assets/js/gui.js" defer></script>
 		<title>Minecraft</title>
 	</head>
 	<body>
-		<div id="debug">Debug</div>
-		<div id="pointer"></div>
+		<div id="debug"></div>
 	</body>
 </html>
