--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<meta name="version" content="rd-132211">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="apple-touch-icon" type="image/x-icon" href="favicon.ico">
 		<script src="assets/lib/three/three.js"></script>
 		<script src="assets/lib/three/PointerLockControls.js"></script>
 		<script src="assets/lib/perlin.js"></script>
