Re-added inventory, hoverable slots

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 		<script src="assets/js/update.js" defer></script>
 		<script src="assets/js/block.js" defer></script>
 		<script src="assets/js/eventlisteners.js" defer></script>
-		<script src="assets/js/main.js" defer></script>
 		<!-- <script src="assets/js/stats.js" defer></script> -->
+		<!-- Indev -->
 		<script src="assets/js/gui.js" defer></script>
+		<script src="assets/js/entity.js" defer></script>
+		<script src="assets/js/main.js" defer></script>
 		<title>Minecraft</title>
 	</head>
 	<body>
