--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 		<script src="assets/js/eventlisteners.js" defer></script>
 		<!-- <script src="assets/js/stats.js" defer></script> -->
 		<!-- Indev -->
+		<script src="assets/js/item.js" defer></script>
 		<script src="assets/js/gui.js" defer></script>
-		<script src="assets/js/entity.js" defer></script>
+		<!-- <script src="assets/js/entity.js" defer></script> -->
 		<script src="assets/js/main.js" defer></script>
 		<title>Minecraft</title>
 	</head>
