--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="assets/js/variables.js" defer></script>
 		<script src="assets/js/block.js" defer></script>
 		<script src="assets/js/item.js" defer></script>
+		<script src="assets/js/layer.js" defer></script>
 		<script src="assets/js/gui.js" defer></script>
 		<!-- <script src="assets/js/entity.js" defer></script> -->
 		<script src="assets/js/render.js" defer></script>
@@ -30,6 +31,5 @@
 
 	<body>
 		<div id="debug"></div>
-		<canvas class="gui"></canvas>
 	</body>
 </html>
