Item tooltip (hidden by default)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 		<title>Minecraft</title>
 	</head>
 
-	<body>
+	<body onselectstart="return false">
 		<div id="debug"></div>
+		<div class="slots"></div>
+		<!-- <div class="tooltip">Tooltip</div> -->
 	</body>
 </html>
