Tooltip position update

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 	<body onselectstart="return false">
 		<div id="debug"></div>
 		<div class="slots"></div>
-		<!-- <div class="tooltip">Tooltip</div> -->
+		<div class="tooltip">Iron Sword</div>
 	</body>
 </html>
