--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="version" content="rd-132211">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/tooltip.css">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<link rel="apple-touch-icon" type="image/x-icon" href="favicon.ico">
 		<script src="assets/lib/three/three.js"></script>
@@ -16,22 +17,22 @@
 		<script src="assets/lib/stats.js"></script>
 		<script src="assets/js/variables.js" defer></script>
 		<script src="assets/js/block.js" defer></script>
-		<script src="assets/js/item.js" defer></script>
-		<script src="assets/js/layer.js" defer></script>
-		<script src="assets/js/gui.js" defer></script>
+		<script src="assets/js/gui/slot.js" defer></script>
+		<script src="assets/js/gui/item.js" defer></script>
+		<script src="assets/js/gui/layer.js" defer></script>
+		<script src="assets/js/gui/gui.js" defer></script>
+		<script src="assets/js/gui/tooltip.js" defer></script>
 		<!-- <script src="assets/js/entity.js" defer></script> -->
 		<script src="assets/js/render.js" defer></script>
 		<script src="assets/js/update.js" defer></script>
 		<script src="assets/js/eventlisteners.js" defer></script>
-		<!-- <script src="assets/js/stats.js" defer></script> -->
-		<!-- Indev -->
 		<script src="assets/js/main.js" defer></script>
+		<!-- <script src="assets/js/gui/stats.js" defer></script> -->
 		<title>Minecraft</title>
 	</head>
 
 	<body onselectstart="return false">
 		<div id="debug"></div>
 		<div class="slots"></div>
-		<div class="tooltip">Iron Sword</div>
 	</body>
 </html>
