--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<script src="assets/lib/stats.js"></script>
 		<script src="assets/js/variables.js" defer></script>
 		<script src="assets/js/block.js" defer></script>
+		<script src="assets/js/gui/layer.js" defer></script>
+		<script src="assets/js/gui/component.js" defer></script>
 		<script src="assets/js/gui/slot.js" defer></script>
 		<script src="assets/js/gui/item.js" defer></script>
-		<script src="assets/js/gui/layer.js" defer></script>
-		<script src="assets/js/gui/gui.js" defer></script>
 		<script src="assets/js/gui/tooltip.js" defer></script>
 		<!-- <script src="assets/js/entity.js" defer></script> -->
 		<script src="assets/js/render.js" defer></script>
