Inventory toggle fix

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="assets/js/render.js" defer></script>
 		<script src="assets/js/update.js" defer></script>
 		<script src="assets/js/events.js" defer></script>
+		<script src="assets/js/game.js" defer></script>
 		<script src="assets/js/gui/hud.js" defer></script>
 		<script src="assets/js/main.js" defer></script>
 		<!-- <script src="assets/js/gui/stats.js" defer></script> -->
