There is a bug, will you find it

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<script src="assets/js/gui/tooltip.js" defer></script>
 		<script src="assets/js/block.js" defer></script>
 		<!-- <script src="assets/js/entity.js" defer></script> -->
+		<script src="assets/js/gui/debug.js" defer></script>
 		<script src="assets/js/render.js" defer></script>
 		<script src="assets/js/update.js" defer></script>
 		<script src="assets/js/events.js" defer></script>
@@ -35,7 +36,6 @@
 	</head>
 
 	<body onselectstart="return false">
-		<div id="debug"></div>
 		<div class="slots"></div>
 	</body>
 </html>
